project('ProjectRedo', 'cpp')

sources = [
    'src/Main.cpp',
]

dependencies = [
    dependency('threads'),
    dependency('sdl2'),
    dependency('lua'),
    dependency('sol2'),
]

link_args = []

executable('ProjectRedo',
    sources: sources,
    dependencies: dependencies,
    link_args: link_args)